--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
     <script src="js/script.js"></script> 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/work.css">
+    <link rel="stylesheet" href="css/contact.css">
 </head>
 <body>
     <header class="flex items-center justify-between inner">
@@ -36,3 +37,17 @@
             </ul>
         </div>
     </header>
+    <main class="main-content inner contact">
+        <div class="contact-inner">
+            <h1>Contact</h1>
+            <div class="contact-txt">
+                <p>2chunkook@gmail.com</p>
+                <p class="go-link"><a href="https://www.instagram.com/l.gno/">instagram</a></p>
+            </div>
+        </div>
+    </main>
+    <footer class="footer inner">
+        <div class="footer-text">
+            <p>© 2022-2024 LEE CHUN KOOK</p>
+        </div>
+    </footer>
