--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
             </a>
         </div>
         <ul class="menu flex">
-            <li><a href="Exhibitions.html">Exhibitions</a></li>
+            <li><a href="sub/Exhibitions.html">Exhibitions</a></li>
             <li><a href="index.html">Works</a></li>
-            <li><a href="cv.html">CV</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="sub/cv.html">CV</a></li>
+            <li><a href="sub/contact.html">Contact</a></li>
         </ul>
         <div class="mo-menu mo">
             <button class="open-menu">Menu</button>
             <ul class="mobile-menu">
                 <button class="close-menu">(Close)</button>
-                <li><a href="Exhibitions.html">Exhibitions</a></li>
+                <li><a href="sub/Exhibitions.html">Exhibitions</a></li>
                 <li><a href="index.html">Works</a></li>
-                <li><a href="cv.html">CV</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="sub/cv.html">CV</a></li>
+                <li><a href="sub/contact.html">Contact</a></li>
             </ul>
         </div>
     </header>
-    <div class="main-content inner">
+    <main class="main-content inner">
         <div class="work-list">
             <ul class="work-list-wrapper grid">
                 <li class="grid-item">
@@ -338,7 +338,7 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </main>
     <footer class="footer inner">
         <div class="footer-text">
             <p>© 2022-2024 LEE CHUN KOOK</p>
