모바일 메뉴
위치수정

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </a>
                     <div class="caption-text caption-type2">
                         <span class="caption-meta">23 x 28 x 3.5 (cm)</span>
-                        <h3 class="caption-title">Guardian of the <br>dragon</h3>
+                        <h3 class="caption-title">Guardian of the dragon</h3>
                     </div>
                 </li>
                 <li class="grid-item">
