포스터 업로드

--- a/sub/Exhibitions.html
+++ b/sub/Exhibitions.html
@@ -11,8 +11,15 @@
     <script src="../js/script.js"></script> 
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/work.css">
+    <link rel="stylesheet" href="../css/exhibitions.css">
 </head>
 <body>
+    <div class="video-container">
+        <video class="background-video" autoplay muted loop>
+            <source class="video_source" src="../video/sky_video.mp4" type="video/mp4">
+        </video>
+        <div class="gradient-overlay"></div>
+    </div>
     <header class="flex items-center justify-between inner">
         <div class="logo">
             <a href="../index.html">
@@ -36,6 +43,48 @@
             </ul>
         </div>
     </header>
+    <main class="main-content inner exhibitions">
+        <div class="work-list">
+            <ul class="work-list-wrapper grid">
+                <li class="grid-item">
+                    <a href="#" class="grid-item_imglink">
+                        <img class="work-img img" src="../img/poster/458654093_3967680686788736_7268031128429640813_n.jpg" alt="poster">
+                    </a>
+                    <div class="caption-text">
+                        <span class="caption-meta">Exhibitions</span>
+                        <h3 class="caption-title">2024, Oaah Agency, Seoul</h3>
+                    </div>
+                </li>
+                <li class="grid-item">
+                    <a href="#" class="grid-item_imglink">
+                        <img class="work-img img" src="../img/poster/398529818_1994693937581991_2994360049186177728_n.jpg" alt="poster">
+                    </a>
+                    <div class="caption-text">
+                        <span class="caption-meta">Exhibitions</span>
+                        <h3 class="caption-title">2023, CAVA LIFE, Seoul</h3>
+                    </div>
+                </li>
+                <li class="grid-item">
+                    <a href="#" class="grid-item_imglink">
+                        <img class="work-img img" src="../img/poster/354778830_651746406802571_4917665923718718575_n.jpg" alt="poster">
+                    </a>
+                    <div class="caption-text">
+                        <span class="caption-meta">Exhibitions</span>
+                        <h3 class="caption-title">2023, Chamber, Seoul</h3>
+                    </div>
+                </li>
+                <li class="grid-item">
+                    <a href="#" class="grid-item_imglink">
+                        <img class="work-img img" src="../img/poster/353463934_990915068743966_1187000038356381107_n.jpg" alt="poster">
+                    </a>
+                    <div class="caption-text">
+                        <span class="caption-meta">Exhibitions</span>
+                        <h3 class="caption-title">2023, lupo, Milan</h3>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </main>
     <footer class="footer inner">
         <div class="footer-text">
             <p>© 2022-2024 LEE CHUN KOOK</p>
