--- a/sub/contact.html
+++ b/sub/contact.html
@@ -14,6 +14,12 @@
     <link rel="stylesheet" href="../css/contact.css">
 </head>
 <body>
+    <div class="video-container">
+        <video class="background-video" autoplay muted loop>
+            <source class="video_source" src="../video/sky_video.mp4" type="video/mp4">
+        </video>
+        <div class="gradient-overlay"></div>
+    </div>
     <header class="flex items-center justify-between inner">
         <div class="logo">
             <a href="../index.html">
