--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="js/script.js"></script> 
+    <script src="js/script.js"></script>
+    <script src="js/popup.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/work.css">
 </head>
 <body>
+    <div class="video-container">
+        <video class="background-video" autoplay muted loop>
+            <source class="video_source" src="video/sky_video.mp4" type="video/mp4">
+        </video>
+        <div class="gradient-overlay"></div>
+    </div>
     <header class="flex items-center justify-between inner">
         <div class="logo">
             <a href="index.html">
@@ -338,6 +345,26 @@
                 </li>
             </ul>
         </div>
+        <div id="popup-container" class="popup hidden">
+            <div class="popup-content">
+                <button id="prev-btn" class="popup-nav prev">
+                    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" width="60" height="60" viewBox="0 0 60 60" xml:space="preserve">
+                        <path class="lightbox-icon-arrow" d="M36.8,36.4L30.3,30l6.5-6.4l-3.5-3.4l-10,9.8l10,9.8L36.8,36.4z"></path>
+                      </svg>
+                </button>
+                <img id="popup-image" src="" alt="Popup Image">
+                <button id="next-btn" class="popup-nav next">
+                    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" width="60" height="60" viewBox="0 0 60 60" xml:space="preserve">
+                        <path class="lightbox-icon-arrow" d="M24.2,23.5l6.6,6.5l-6.6,6.5l3.6,3.5L37.8,30l-10.1-9.9L24.2,23.5z"></path>
+                      </svg>
+                </button>
+                <button id="close-popup" class="popup-close">
+                    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet" fill="#FFF">
+                        <polygon class="lightbox-icon-close" points="64.5,39.8 60.2,35.5 50,45.7 39.8,35.5 35.5,39.8 45.7,50 35.5,60.2 39.8,64.5 50,54.3 60.2,64.5 64.5,60.2 54.3,50"></polygon>
+                    </svg>
+                </button>
+            </div>
+        </div>        
     </main>
     <footer class="footer inner">
         <div class="footer-text">
