--- a/sub/cv.html
+++ b/sub/cv.html
@@ -13,6 +13,12 @@
     <link rel="stylesheet" href="../css/cv.css">
 </head>
 <body>
+    <div class="video-container">
+        <video class="background-video" autoplay muted loop>
+            <source class="video_source" src="../video/sky_video.mp4" type="video/mp4">
+        </video>
+        <div class="gradient-overlay"></div>
+    </div>
     <header class="flex items-center justify-between inner">
         <div class="logo">
             <a href="../index.html">
@@ -39,11 +45,7 @@
     <main class="main-content inner cv">
         <div class="cv-wrap">
             <div>
-                <p class="cv-title">cv</p>
-                <div class="cv-txt">
-                    <p>Born 1995 in Ansan, Korea<br>
-                        Lives and works in Seoul, Korea</p>
-                </div>
+                <p class="cv-title">Lee Chunkook (b.1995, South Korea)</p>
             </div>
             <div class="education">
                 <p class="cv-title">Education</p>
