모바일버전 수정

--- a/sub/Exhibitions.html
+++ b/sub/Exhibitions.html
@@ -14,8 +14,9 @@
     <link rel="stylesheet" href="../css/exhibitions.css">
 </head>
 <body>
+    <div class="page-transition"></div>
     <div class="video-container">
-        <video class="background-video" autoplay muted loop>
+        <video class="background-video" autoplay muted loop playsinline preload="auto">
             <source class="video_source" src="../video/sky_video.mp4" type="video/mp4">
         </video>
         <div class="gradient-overlay"></div>
