--- a/sub/cv.html
+++ b/sub/cv.html
@@ -10,6 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="../js/script.js"></script> 
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/work.css">
     <link rel="stylesheet" href="../css/cv.css">
 </head>
 <body>
